[Edit Mesh] overlay of linked meshes in Edit Mode. [2.82 regression] #73095

Closed
opened 2020-01-13 18:16:43 +01:00 by Oleksandr Kahal · 22 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-12 16:23, hash: 0ef881cc57
Worked: (optional)

Short description of error
References in Edit Mode don't show selected\deselected vertices\edges on each over (like in previouse versions (2.8, 2.81a))
Is this bug or maybe feature? If it is feature, do you be so pleasure to help found it on interface or hotkey? It hard to work without it. I had to downgrade to 2.81a, and work without cool 2.82's features.

Exact steps for others to reproduce the error

  • select object
  • make some duplicate linked (alt+D or from menu)
  • enter on "Edit Mode
  • look on references - you don't see any selected vertices\edges\faces (like in 2.8 or 2.81)
  • try to change something- loop cut on example
  • exit to "Object Mode" - you'll see all new edges (if get an wireframe on shaded)
  • try to enter "Edit Mode" again - all edges in "wireframe on shaded mode" dissapeared!

instaces_bug_or_feature.blend
References_bug_or_feature.mp4

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-12 16:23, hash: `0ef881cc57` Worked: (optional) **Short description of error** References in Edit Mode don't show selected\deselected vertices\edges on each over (like in previouse versions (2.8, 2.81a)) Is this bug or maybe feature? If it is feature, do you be so pleasure to help found it on interface or hotkey? It hard to work without it. I had to downgrade to 2.81a, and work without cool 2.82's features. **Exact steps for others to reproduce the error** - select object - make some duplicate linked (alt+D or from menu) - enter on "Edit Mode - look on references - you don't see any selected vertices\edges\faces (like in 2.8 or 2.81) - try to change something- loop cut on example - exit to "Object Mode" - you'll see all new edges (if get an wireframe on shaded) - try to enter "Edit Mode" again - all edges in "wireframe on shaded mode" dissapeared! [instaces_bug_or_feature.blend](https://archive.blender.org/developer/F8275964/instaces_bug_or_feature.blend) [References_bug_or_feature.mp4](https://archive.blender.org/developer/F8275965/References_bug_or_feature.mp4)

Added subscriber: @ignietferro-1

Added subscriber: @ignietferro-1

#59203 was marked as duplicate of this issue

#59203 was marked as duplicate of this issue
Oleksandr Kahal changed title from [References] References in Edit Mode to [References] References in Edit Mode. 2.82 2020-01-13 18:17:09 +01:00

Added subscriber: @ronsn

Added subscriber: @ronsn

This behavior was introduced by this Git commit 07a959067d5a3c05fcbd65105525d6e139be5c5f (07a959067d).

This behavior was introduced by this Git commit `07a959067d5a3c05fcbd65105525d6e139be5c5f` (07a959067d).

So it means it would be? And references now couldn't be exactly as in previous versions? Or it is going to resolve in the future? Maybe I didn't understand something... I'm not coder, I'm 3D artist.

So it means it would be? And references now couldn't be exactly as in previous versions? Or it is going to resolve in the future? Maybe I didn't understand something... I'm not coder, I'm 3D artist.

@ignietferro-1: As far as I can see it was not intended to let it behave like this, but it is also likely that this behavior is a result of a necessary change to prevent Blender to crash in some situations like this one: https://developer.blender.org/T72848

However: My comment with that weird string wasn't addressed to you personally but for other developers to investigate this issue faster (if and when someone has time to investigate). :)

@ignietferro-1: As far as I can see it was not intended to let it behave like this, but it is also likely that this behavior is a result of a necessary change to prevent Blender to crash in some situations like this one: https://developer.blender.org/T72848 However: My comment with that weird string wasn't addressed to you personally but for other developers to investigate this issue faster (if and when someone has time to investigate). :)

@ronsn Big thanks for explanation! I'll be waiting for resolvation of that issue.

@ronsn Big thanks for explanation! I'll be waiting for resolvation of that issue.

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm that 07a959067d introduced the problem.
@ideasman42, mind taking a look?

I can confirm that `07a959067d` introduced the problem. @ideasman42, mind taking a look?
Germano Cavalcante changed title from [References] References in Edit Mode. 2.82 to [Edit Mesh] overlay of linked meshes in Edit Mode. [2.82 regression] 2020-01-14 17:52:29 +01:00

Added subscriber: @martenmh

Added subscriber: @martenmh

I think i've tracked it down to this line in overlay_engine.c:

 188   const bool in_edit_mode = (ob->mode & OB_MODE_EDIT) && BKE_object_is_in_editmode(ob);

As stated by @ronsn and @mano-wii it was introduced in 07a959067d,
so simply changing it back to

188   const bool in_edit_mode = BKE_object_is_in_editmode(ob);

will resolve the issue.
However, testing https:*developer.blender.org/T72848 causes a segfault.

I think i've tracked it down to this line in `overlay_engine.c`: ``` 188 const bool in_edit_mode = (ob->mode & OB_MODE_EDIT) && BKE_object_is_in_editmode(ob); ``` As stated by @ronsn and @mano-wii it was introduced in `07a959067d`, so simply changing it back to ``` 188 const bool in_edit_mode = BKE_object_is_in_editmode(ob); ``` will resolve the issue. However, testing [https:*developer.blender.org/T72848 ](https:*developer.blender.org/T72848) causes a segfault.

Added subscriber: @brecht

Added subscriber: @brecht

Tagging with 2.82 since this was marked as high priority and is a regression.

Tagging with 2.82 since this was marked as high priority and is a regression.

Added subscribers: @HenriqueGonzaga, @JacquesLucke

Added subscribers: @HenriqueGonzaga, @JacquesLucke
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2020-01-29 16:28:55 +01:00
Member

Issue wasn't assigned. Will check on it upcoming week.

Issue wasn't assigned. Will check on it upcoming week.

This issue was referenced by d09646a40b

This issue was referenced by d09646a40b1928308025d8ceb2c2d505651fc9a4
Member

Seems like that b281 and b280 drew all the object as they were in edit mode, but the selection engine didn't react to the duplicates as these objects were not in edit mode. Personally I find the functionality a bit weird but this was also the case for b279 so will add a patch.

Note that I wasn't able to let it crash as mentioned by @martenmh. This could be that other changes (like #72490 (Collections: Exclude From View toggle causes segment violation.)) fixed the crash.
Could other people help out testing the patch provided by @martenmh.

Seems like that b281 and b280 drew all the object as they were in edit mode, but the selection engine didn't react to the duplicates as these objects were not in edit mode. Personally I find the functionality a bit weird but this was also the case for b279 so will add a patch. Note that I wasn't able to let it crash as mentioned by @martenmh. This could be that other changes (like #72490 (Collections: Exclude From View toggle causes segment violation.)) fixed the crash. Could other people help out testing the patch provided by @martenmh.
Member

I am not able to reproduce the issue that @ideasman42 mentions in the patch. In a discussion on blender.chat we identified that this functionality has differences between blender versions and has limitations when used in different ways (modifiers + multi object editing selection to name some)

Render with modifiers

  • 2.79: Does not render the edit overlay when one object has a modifier (visible or not)
    Screenshot from 2020-02-03 13-24-30.png
  • 2.80+2.81: Does render the edit overlay event when modifiers are added, resulting in incorrect geometry
    Screenshot from 2020-02-03 13-25-46.png
  • 2.82: Does not render the edit overlay at all
    Screenshot from 2020-02-03 13-27-38.png
  • 2.82 + this patch: renders like 2.80 or 2.81, but it has been reported that it crashes when adding/removing modifiers
    Screenshot from 2020-02-03 13-25-46.png

Render without modifiers

  • 2.79 will render the edit overlay on all duplicates
    Screenshot from 2020-02-03 13-30-30.png
  • 2.80+2.81 will render the editor overlay on all duplicates
    Screenshot from 2020-02-03 13-31-07.png
  • 2.82 will not render the edit overlay
    Screenshot from 2020-02-03 13-31-18.png
  • 2.82 + this patch: renders like 2.80 or 2.81.
    Screenshot from 2020-02-03 13-31-07.png

Other issues

  • Multi object editing of linked duplicated meshes: Selection does not work, except for the active object

In the manual a overview is given https://docs.blender.org/manual/en/latest/scene_layout/object/editing/duplication.html#linked-duplicates but does not go into the details. What makes it valid to apply the patch with the addition to check for active modifiers. This option has there been for a long time but hasn't have good documentation, therefore can failed when used differently.

My biggest concern is that it has been reported that the change crashes when used in a certain way.

I am not able to reproduce the issue that @ideasman42 mentions in the patch. In a discussion on blender.chat we identified that this functionality has differences between blender versions and has limitations when used in different ways (modifiers + multi object editing selection to name some) **Render with modifiers** * 2.79: Does not render the edit overlay when one object has a modifier (visible or not) ![Screenshot from 2020-02-03 13-24-30.png](https://archive.blender.org/developer/F8318907/Screenshot_from_2020-02-03_13-24-30.png) * 2.80+2.81: Does render the edit overlay event when modifiers are added, resulting in incorrect geometry ![Screenshot from 2020-02-03 13-25-46.png](https://archive.blender.org/developer/F8318910/Screenshot_from_2020-02-03_13-25-46.png) * 2.82: Does not render the edit overlay at all ![Screenshot from 2020-02-03 13-27-38.png](https://archive.blender.org/developer/F8318912/Screenshot_from_2020-02-03_13-27-38.png) * 2.82 + this patch: renders like 2.80 or 2.81, but it has been reported that it crashes when adding/removing modifiers ![Screenshot from 2020-02-03 13-25-46.png](https://archive.blender.org/developer/F8318910/Screenshot_from_2020-02-03_13-25-46.png) **Render without modifiers** * 2.79 will render the edit overlay on all duplicates ![Screenshot from 2020-02-03 13-30-30.png](https://archive.blender.org/developer/F8318929/Screenshot_from_2020-02-03_13-30-30.png) * 2.80+2.81 will render the editor overlay on all duplicates ![Screenshot from 2020-02-03 13-31-07.png](https://archive.blender.org/developer/F8318930/Screenshot_from_2020-02-03_13-31-07.png) * 2.82 will not render the edit overlay ![Screenshot from 2020-02-03 13-31-18.png](https://archive.blender.org/developer/F8318932/Screenshot_from_2020-02-03_13-31-18.png) * 2.82 + this patch: renders like 2.80 or 2.81. ![Screenshot from 2020-02-03 13-31-07.png](https://archive.blender.org/developer/F8318930/Screenshot_from_2020-02-03_13-31-07.png) **Other issues** * Multi object editing of linked duplicated meshes: Selection does not work, except for the active object In the manual a overview is given https://docs.blender.org/manual/en/latest/scene_layout/object/editing/duplication.html#linked-duplicates but does not go into the details. What makes it valid to apply the patch with the addition to check for active modifiers. This option has there been for a long time but hasn't have good documentation, therefore can failed when used differently. My biggest concern is that it has been reported that the change crashes when used in a certain way.

Also see #65778 (linked duplicate objects - issues with selection in edit mode) and #72733 (Issue with shared meshes overwriting modifiers).

Also see #65778 (linked duplicate objects - issues with selection in edit mode) and #72733 (Issue with shared meshes overwriting modifiers).
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.82 milestone 2023-02-08 16:41:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73095
No description provided.